--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
+    "bcrypt": "^6.0.0",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
