--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+server.js
 
 # env files (can opt-in for committing if needed)
 .env*
@@ -41,3 +42,5 @@ yarn-error.log*
 next-env.d.ts
 
 /app/generated/prisma
+
+certificates
