--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.553.0",
     "next": "16.0.3",
     "react": "19.2.0",
