--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "dom-to-image-more": "^3.7.2",
-    "html2canvas": "^1.4.1",
+    "html2canvas-pro": "^1.5.13",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.553.0",
     "next": "16.0.3",
